# noise_guided_splatting

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
scripts/: run_evaluation.py  train.py
src/ngs/: config.py  evaluator.py  ngs_strategy.py  trainer.py
src/ngs/data/: __init__.py  colmap.py  normalize.py  read_write_model.py  traj.py
src/ngs/utils/: lib_bilagrid.py  noise.py  strategy_ops.py  utils.py
