[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ngs"
version = "0.1.0" 
authors = [
  { name="Aly El Hakie", email="alym@opsiclear.com" },
]
description = "A package for Gaussian Splatting evaluation and related utilities."
readme = "README.md" 
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "setuptools>=61.0",
    "wheel",
    "gsplat @ git+https://github.com/nerfstudio-project/gsplat.git@65042cc501d1cdbefaf1d6f61a9a47575eec8c71",
    "imageio[ffmpeg]",
    "matplotlib",
    "nerfview==0.0.2",
    "numpy",
    "opencv-python",
    "Pillow",
    "plyfile",
    "scikit-learn",
    "scipy",
    "tensorboard",
    "tensorly",
    "numpy<2.0.0",
    "torchmetrics[image]",
    "tqdm",
    "tyro>=0.8.8",
    "viser",
    "pyyaml>=6.0.3",
    "open3d>=0.19.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv]
no-build-isolation = true

[tool.setuptools.packages.find]
where = ["src"] 

